--- a/user_dashboard.html
+++ b/user_dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>eCommerce - User Dashboard</title>
-    <link rel="stylesheet" href="css/user_dashboard.css">
+    <link rel="stylesheet" href="user_dashboard.css">
 </head>
 <body>
     <div class="user-dashboard-container">
