--- a/user_dashboard.html
+++ b/user_dashboard.html
@@ -11,42 +11,42 @@
         <h2>Welcome to Priya's Handmade Soap</h2>
         <div class="items-container">
             <div class="item">
-                <img src="css/charcoal.jpg" alt="Charcoal Soap" class="item-image">
+                <img src="charcoal.jpg" alt="Charcoal Soap" class="item-image">
                 <h4>Charcoal Soap</h4>
                 <p>Price: ₹109</p>
                 <button onclick="addToCart('Charcoal Soap', 109)">Add to Cart</button>
                 <button onclick="addToWishlist('Charcoal Soap')">Add to Wishlist</button>
             </div>
             <div class="item">
-                <img src="css/neem.jpg" alt="Neem Soap" class="item-image">
+                <img src="neem.jpg" alt="Neem Soap" class="item-image">
                 <h4>Neem Soap</h4>
                 <p>Price: ₹109</p>
                 <button onclick="addToCart('Neem Soap', 109)">Add to Cart</button>
                 <button onclick="addToWishlist('Neem Soap')">Add to Wishlist</button>
             </div>
             <div class="item">
-                <img src="css/coconut.jpg" alt="Pure Coconut Soap" class="item-image">
+                <img src="coconut.jpg" alt="Pure Coconut Soap" class="item-image">
                 <h4>Pure Coconut Soap</h4>
                 <p>Price: ₹129</p>
                 <button onclick="addToCart('Pure Coconut Soap', 129)">Add to Cart</button>
                 <button onclick="addToWishlist('Pure Coconut Soap')">Add to Wishlist</button>
             </div>
             <div class="item">
-                <img src="css/soap.jpg" alt="Rose Soap" class="item-image">
+                <img src="soap.jpg" alt="Rose Soap" class="item-image">
                 <h4>Rose Soap</h4>
                 <p>Price: ₹129</p>
                 <button onclick="addToCart('Rose Soap', 129)">Add to Cart</button>
                 <button onclick="addToWishlist('Rose Soap')">Add to Wishlist</button>
             </div>
             <div class="item">
-                <img src="css/redwine.jpg" alt="Red Wine Soap" class="item-image">
+                <img src="redwine.jpg" alt="Red Wine Soap" class="item-image">
                 <h4>Red Wine Soap</h4>
                 <p>Price: ₹139</p>
                 <button onclick="addToCart('Red Wine Soap', 139)">Add to Cart</button>
                 <button onclick="addToWishlist('Red Wine Soap')">Add to Wishlist</button>
             </div>
             <div class="item">
-                <img src="css/soap2.jpg" alt="Faceglow Soap" class="item-image">
+                <img src="soap2.jpg" alt="Faceglow Soap" class="item-image">
                 <h4>Faceglow Soap</h4>
                 <p>Price: ₹159</p>
                 <button onclick="addToCart('Faceglow Soap', 159)">Add to Cart</button>
